--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@
 
 /* 헤더 부분 팀이름 스타일 */
 #header-team-name {
-  display: inline; /* h2 요소를 인라인 요소로 변경 */
+  display: inline;
+  /* h2 요소를 인라인 요소로 변경 */
   color: #2c3e50;
   border-bottom: solid black;
 }
@@ -129,12 +130,14 @@
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
+  z-index: auto;
+  left: 50%;
+  top: 50%;
   width: 100%;
   height: 100%;
   overflow: auto;
+  transform: translate(-50%, -50%);
+
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -144,8 +147,12 @@
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 50%;
+  height: 80%; /* 높이 조정 */
+
+  
 }
+
 
 .close {
   color: #aaa;
@@ -161,6 +168,35 @@
   cursor: pointer;
 }
 
+/* 모달 창 내부 html 스타일 */
+.innerModal {
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.top-content {
+  display: flex;
+  justify-content: space-between;
+  margin-top : 20px;
+}
+
+#mphoto {
+  width: 50%;
+
+}
+
+#simpleProfile {
+  width: 300px;
+  height: 200px;
+}
+
+#detailedProfile {
+  width: 440px;
+  height: 200px;
+  margin : 35px auto;
+}
 /* font */
 body {
   font-family: "Dongle", sans-serif;
